<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="@dimen/icon_width"
        android:layout_height="@dimen/icon_width"
        android:layout_marginTop="@dimen/padding2"
        android:layout_centerHorizontal="true"
        android:src="@drawable/uni_icon" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/img_icon"
        android:gravity="center_horizontal"
        android:padding="@dimen/padding2"
        android:orientation="vertical">


        <TextView
            android:id="@+id/onbord_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onbording_one_title"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:textSize="@dimen/txt_title_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/onbord_doc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding2"
            android:paddingLeft="@dimen/desc_padding"
            android:paddingRight="@dimen/desc_padding"
            android:text="@string/onbording_one_doc"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textColor="@android:color/black"
            android:textSize="@dimen/txt_doc_size"
            android:layout_below="@+id/onbord_title"/>

        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/onbord_doc"
            android:layout_marginTop="50dp"
            android:text="@string/following"
            style="@style/bluebuton"></Button>
    </RelativeLayout>


</RelativeLayout>