<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="@dimen/padding"
    android:orientation="vertical">

    <TextView
        android:id="@+id/slide_one_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onbording_one_title"
        android:textColor="@android:color/black"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        style="@style/Textprofile" />

    <TextView
        android:id="@+id/slide_one_doc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/onbording_one_doc"
        style="@style/Textprofiledata"
        android:layout_below="@+id/slide_one_title"/>
<!--    <view-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="1dp"-->
<!--        android:layout_marginTop="@dimen/padding"></view>-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding">
        <LinearLayout
            android:id="@+id/tileview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_icon"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_menu_gallery"/>
            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="@dimen/padding"
                android:text="Name"
                style="@style/Textprofile"
                android:textStyle="bold"/>
        </LinearLayout>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="140dp">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerHorizontal="true"
            android:overScrollMode="never"
            android:background="#FFFFFF"
            android:scrollbars="vertical"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/review"
        android:textAlignment="center"
        style="@style/Textprofile"
        android:layout_below="@+id/slide_one_title"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gray_box">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="2"></EditText>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding2"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/profile"
            style="@style/Textprofile"
            android:layout_below="@+id/slide_one_title"/>
        <CheckBox
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/padding"
            android:layout_gravity="center_vertical">
        </CheckBox>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="@string/following"
            style="@style/bluebuton"></Button>
    </RelativeLayout>

</LinearLayout>