<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white">

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="@dimen/padding"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="@dimen/icon_width"
        android:layout_height="@dimen/icon_width"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/uni_icon" />
    <TextView
        android:id="@+id/onbord_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onbording_one_title"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/img_icon"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:textSize="@dimen/slide_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/onbord_doc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/padding"
        android:paddingLeft="@dimen/desc_padding"
        android:paddingRight="@dimen/desc_padding"
        android:text="@string/onbording_one_doc"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:textSize="@dimen/slide_desc"
        android:layout_below="@+id/onbord_title"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="@dimen/padding"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/onbord_doc"
        android:layout_above="@+id/btn_start"
        android:overScrollMode="never"
        android:background="#FFFFFF"
        android:scrollbars="vertical"
        />
    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/following"
        style="@style/bluebuton"></Button>

</RelativeLayout>



</RelativeLayout>