<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
android:fitsSystemWindows="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/main"
    android:layout_margin="@dimen/padding"
    android:orientation="vertical">
    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        style="@style/Textprofiledata">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/padding"
        android:weightSum="10">
        <TextView
            android:id="@+id/type_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            style="@style/Textprofile"
            android:text="@string/type">

        </TextView>
        <TextView
            android:id="@+id/type_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:layout_below="@+id/description"
            style="@style/Textprofiledata"
            android:text="@string/profile">

        </TextView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/padding"
        android:weightSum="10">
        <TextView
            android:id="@+id/type_category_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            style="@style/Textprofile"
            android:text="@string/category">

        </TextView>
        <TextView
            android:id="@+id/type_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:layout_below="@+id/description"
            style="@style/Textprofiledata"
            android:text="@string/profile">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/padding"
        android:weightSum="10">
        <TextView
            android:id="@+id/type_provider_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            style="@style/Textprofile"
            android:text="@string/provider">

        </TextView>
        <TextView
            android:id="@+id/type_provider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:layout_below="@+id/description"
            style="@style/Textprofiledata"
            android:text="@string/profile">

        </TextView>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_below="@+id/type"
        android:layout_marginTop="@dimen/padding"
        android:layout_height="200dp">

        <com.google.android.gms.maps.MapView
            android:id="@+id/map_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:ignore="MissingClass">
        </com.google.android.gms.maps.MapView>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/map">

        </ImageView>
    </RelativeLayout>
</LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scrollableview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:layout_below="@+id/main"
        android:paddingTop="@dimen/activity_margin_content"
        android:paddingBottom="@dimen/activity_margin_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listItem="@layout/item_dessert" />


</LinearLayout>